@@ -31,6 +31,12 @@
     assayDataElement<- in Biobase 2.33.1.
     \item Changing internals of MethylSet() (again) to follow recent
     changes in assayDataElement<- in Biobase 2.33.2.
+    \item Fixing issues with combine() on various classes where pData
+    columns doesn't have the same class. This translates to fixes for
+    combineArrays and estimateCellType.
+    \item estimateCellCounts gets a referencePlatform array (defaulting to
+    450k) and now silently converts the input data to the desired platform
+    using convertArray.
   }
 }
 
